docs(tech-weekly): typo

--- a/src/tech-weekly/04-01-2022.md
+++ b/src/tech-weekly/04-01-2022.md
@@ -4,7 +4,7 @@ Welcome to the shiny RSS3 Tech Weekly.
 
 Happy April Fool’s Day! Today we also celebrated the first founding anniversary of RSS3 🎉!
 
-What a busy week for the Dev 🌀 RSS3, as the internet testing of PreGod progresses, we have had a plate full of things to work on.
+What a busy week for the Dev 🌀 RSS3, as the internal testing of PreGod progresses, we have had a plate full of things to work on.
 
 ## What has happened
 
