docs(protocol): update queries and fix typo

--- a/src/protocol/v0.4.0-rc.2.md
+++ b/src/protocol/v0.4.0-rc.2.md
@@ -447,10 +447,10 @@ Available queries:
 | --- | --- |
 | type | Returning only links with this type. Defined by [RIP-4: Registered Link Types](./RIPs/RIP-4.md). |
 | limit | Used for pagination, limiting the count of the returning elements. There should be a maximum and minimal value when implementing. |
-| last_instance | Used for pagination. If specified, returning the instances after this instance. |
-| instance | If specified, returning only the list containing this instance. If specified but no list satisfies, returning null list. |
+| last_time | Used for pagination. If specified, returning the instances after this instance. |
+| to | If specified, returning only the list containing this instance. If specified but no list satisfies, returning null list. |
 | link_sources | If specified, returning only links with `source` field in the filter list. Multiple values are separated by commas. |
-| profile_source | If specified, try to get Connected Accounts from this source, and return items belonging to Connected Accounts and Main Account, otherwise only items belonging to Main Account are returned |
+| profile_sources | If specified, try to get Connected Accounts from this source, and return items belonging to Connected Accounts and Main Account, empty to get all profiles' Connected Accounts. Multiple values are separated by commas. |
 
 E.g.
 
@@ -469,13 +469,13 @@ E.g.
 - Query if an instance is followed by another instance:
 
     ```text
-    rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereum/links?type=follow&instance=rss3%3A%2F%2F0x8768515270aA67C624d3EA3B98CA464672C50183%40ethereum
+    rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereum/links?type=follow&to=rss3%3A%2F%2F0x8768515270aA67C624d3EA3B98CA464672C50183%40ethereum
     ```
 
 - Query if an instance follows another instance:
 
     ```text
-    rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereum/backlinks?type=follow&instance=rss3%3A%2F%2F0x8768515270aA67C624d3EA3B98CA464672C50183%40ethereum
+    rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereum/backlinks?type=follow&to=rss3%3A%2F%2F0x8768515270aA67C624d3EA3B98CA464672C50183%40ethereum
     ```
 
 - A note’s comments:
@@ -547,8 +547,8 @@ Links URI `rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereum/li
     "list": [
         {
             "date_created": "2021-01-01T00:00:000Z",
-            "from": "0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944",
-            "to": "0x0fefeD77Bb715E96f1c35c1a4E0D349563d6f6c0",
+            "from": "rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereum",
+            "to": "rss3://account:0x0fefeD77Bb715E96f1c35c1a4E0D349563d6f6c0@ethereum",
 
             "source": "Corssbell",
 
@@ -559,8 +559,8 @@ Links URI `rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereum/li
         },
         {
             "date_created": "2021-01-01T00:00:000Z",
-            "from": "0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944",
-            "to": "0x8768515270aA67C624d3EA3B98CA464672C50183",
+            "from": "rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereum",
+            "to": "rss3://account:0x8768515270aA67C624d3EA3B98CA464672C50183@ethereum",
 
             "source": "Lens",
 
@@ -586,8 +586,8 @@ Backlinks URI `rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereu
     "list": [
         {
             "date_created": "2021-01-01T00:00:000Z",
-            "from": "0x0fefeD77Bb715E96f1c35c1a4E0D349563d6f6c0",
-            "to": "0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944",
+            "from": "rss3://account:0x0fefeD77Bb715E96f1c35c1a4E0D349563d6f6c0@ethereum",
+            "to": "rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereum",
 
             "source": "Corssbell",
 
@@ -598,8 +598,8 @@ Backlinks URI `rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereu
         },
         {
             "date_created": "2021-01-01T00:00:000Z",
-            "from": "0x8768515270aA67C624d3EA3B98CA464672C50183",
-            "to": "0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944",
+            "from": "rss3://account:0x8768515270aA67C624d3EA3B98CA464672C50183@ethereum",
+            "to": "rss3://account:0xC8b960D09C0078c18Dcbe7eB9AB9d816BcCa8944@ethereum",
 
             "source": "Lens",
 
@@ -636,8 +636,9 @@ Available queries:
 | tags | If specified, returning only items of the corresponding tags (filtered using the `tags` attribute of items). Multiple values are separated by commas. |
 | mime_types | If specified, returning only items with `attachments.mime_type` field containing the corresponding values. Multiple values are separated by commas. |
 | item_sources | If specified, returning only items with `source` field in the filter list. Multiple values are separated by commas. |
-| link_source and link_type | If specified, items belonging to instaces linked by current instace are returned |
-| profile_source | If specified, try to get Connected Accounts from this source, and return items belonging to Connected Accounts and Main Account, otherwise only items belonging to Main Account are returned |
+| link_source | If specified, items belonging to instances linked by current instance are returned |
+| link_type | If specified, items belonging to instances linked by current instance are returned |
+| profile_sources | If specified, try to get Connected Accounts from this source, and return items belonging to Connected Accounts and Main Account, empty to get all profiles' Connected Accounts. Multiple values are separated by commas. |
 
 E.g.,
 
